--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -12,6 +12,7 @@
     gap: 30px;
     justify-items: center;
     max-width: 1200px;
+    width: 100%;
     margin: 0 auto 80px;
     padding: 0 20px;
 }
