--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -27,10 +27,15 @@
     text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
 
+.hero-buttons  a {
+    border-color: white;
+    border-width: 1px;
+    border-style: solid;
+}
+
 .button {
     padding: 12px 30px;
-    border-radius: 50px;
-    outline: none;
+    border-radius: 50px;;
     border: none;
     cursor: pointer;
     font-size: 1.1rem;
@@ -43,7 +48,7 @@
 .button-primary {
     background-color: transparent;
     color: #fff;
-    box-shadow: 0 4px 15px rgba(255, 107, 107, 0.4);
+    /* box-shadow: 0 4px 15px rgba(255, 107, 107, 0.4); */
 }
 
 .button-primary:hover {
